# SaveSync

./: .gitignore  Dockerfile  README.md  SaveSync.md  __init__.py  index.js  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  sincronização de um fork.md
.github/workflows/: python-app.yml
Backend/: app.py  banco_de_dados  buscar_dir.py  game_image.py
Backend/api/: api_Imagens.py
Backend/data/: banco_de_dados.db  base.py  bd.py  config.py  database.db  del.py  ler.py  test.py
Backend/firebase/: main.py
Backend/game_config/packet_base/: __init__.py
Backend/game_config/packet_bd/: __init__.py
Backend/routes/: app.py  test.py
Backend/routes/gamebd_config/packetG_base/: __init__.py
Backend/routes/gamebd_config/packetG_bd/: __init__.py
Backend/routes/static/css/: global.css
Backend/routes/static/css/cadastro/: index.css
Backend/routes/static/css/home/: index.css
Backend/routes/static/css/login/: index.css
Backend/routes/static/js/: main.js  profile.js  selectpath.js
Backend/routes/templates/: cadastro.html  home.html  login.html
Backend/routes/userbd_config/packetU_base/: __init__.py
Backend/routes/userbd_config/packetU_bd/: __init__.py
Backend/scraping/: scraping_Imagens.py
Frontend/: dir.js  electron.js  forge.config.js  package-lock.json  package.json  preload.js  requirements.txt
Frontend/Electron/: package-lock.json  package.json
Frontend/static/css/: global.css  style.css
Frontend/static/css/cadastro/: index.css
Frontend/static/css/home/: index.css
Frontend/static/css/index/: index.css
Frontend/static/css/login/: index.css
Frontend/static/js/: profile.js  script.js
Frontend/templates/: cadastro.html  home.html  index.html  login.html  test.html
SaveSync/: .gitignore  package-lock.json  package.json
SaveSync/src/: Global.css  electron.js  index.html
public/: electron.js  index.html
src/: App.js  Global.css  index.js
tests/: test_flask.py  test_folders.py
