[tool.poetry]
name = "savesync"
version = "0.0.1"
description = "SaveSync é um projeto para permitir que os jogadores salvem seus save.game na nuvem e sincronizem seus saves em diferentes dispositivos."
authors = ["Anderson <eusouanderson@outlook.com>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "22.1.0"
blinker = "1.6.2"
blue = "0.9.1"
cachecontrol = "0.13.1"
cachetools = "5.3.1"
certifi = "2023.5.7"
cffi = "1.15.1"
charset-normalizer = "3.1.0"
click = "8.1.3"
cryptography = "41.0.1"
firebase-admin = "6.2.0"
flake8 = "4.0.1"
flask = "2.3.2"
google-api-core = "2.11.1"
google-api-python-client = "2.90.0"
google-auth = "2.21.0"
google-auth-httplib2 = "0.1.0"
google-cloud-core = "2.3.2"
google-cloud-firestore = "2.11.1"
google-cloud-storage = "2.10.0"
google-crc32c = "1.5.0"
google-resumable-media = "2.5.0"
googleapis-common-protos = "1.59.1"
greenlet = "2.0.2"
grpcio = "1.56.0"
grpcio-status = "1.56.0"
httplib2 = "0.22.0"
idna = "3.4"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.3"
mccabe = "0.6.1"
msgpack = "1.0.5"
mypy-extensions = "1.0.0"
pathspec = "0.11.1"
platformdirs = "3.8.0"
proto-plus = "1.22.3"
protobuf = "4.23.3"
pyasn1 = "0.5.0"
pyasn1-modules = "0.3.0"
pycodestyle = "2.8.0"
pycparser = "2.21"
pyflakes = "2.4.0"
pyjwt = "2.7.0"
pyparsing = "3.1.0"
requests = "2.31.0"
rsa = "4.9"
six = "1.16.0"
sqlalchemy = "2.0.16"
tomli = "2.0.1"
typing-extensions = "4.6.3"
uritemplate = "4.1.1"
urllib3 = "1.26.16"
werkzeug = "2.3.6"
winshell = "0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
